@@ -1,3 +1,9 @@
+drkns 25.11.2016 15:41:04 +0200 - build 4853
+
+1. 0003355: Far виснет после запроса привилегий при поиске в архивах.
+
+2. Продолжение 4849.
+
 drkns 23.11.2016 23:32:50 +0200 - build 4852
 
 1. С форума: падало при постоянных блоках и выделенном блоке от почти начала строки до ее конца и нажатии Enter в начале строки
